--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ deadpool = {version = "0.9", optional = true}
 mobc = {version = ">=0.7,<0.9", optional = true}
 scoped-futures = {version = "0.1", features = ["std"]}
 
+postgres-native-tls = { version = "0.5.0", optional = true }
+
 [dev-dependencies]
 tokio = {version = "1.12.0", features = ["rt", "macros", "rt-multi-thread"]}
 cfg-if = "1"
